--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,7 +9,8 @@
 				data-sap-ui-theme="sap_goldreflection">
 		</script>
 		<!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
-
+		<script src="bpmconsumer/Commons.js" type="text/javascript"></script>
+		<script src="bpmconsumer/DataModels.js" type="text/javascript"></script>
 		<script>
 				sap.ui.localResources("bpmconsumer");
 				var view = sap.ui.view({id:"idBpmConsumer1", viewName:"bpmconsumer.BpmConsumer", type:sap.ui.core.mvc.ViewType.JS});
