--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@
 		<!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
 		<script src="bpmconsumer/Commons.js" type="text/javascript"></script>
 		<script src="bpmconsumer/DataModels.js" type="text/javascript"></script>
+		<link href="bpmconsumer/style.css" media="screen, handheld" rel="stylesheet" type="text/css">
 		<script>
 				sap.ui.localResources("bpmconsumer");
 				var view = sap.ui.view({id:"idBpmConsumer1", viewName:"bpmconsumer.BpmConsumer", type:sap.ui.core.mvc.ViewType.JS});
