--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-		<script src="resources/sap-ui-core.js"
-				id="sap-ui-bootstrap"
-				data-sap-ui-libs="sap.ui.commons"
-				data-sap-ui-theme="sap_goldreflection">
+<script src="resources/sap-ui-core.js" id="sap-ui-bootstrap"
+	data-sap-ui-libs="sap.ui.commons" data-sap-ui-theme="sap_bluecrystal">
 		</script>
-		<!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
-		<script src="bpmconsumer/Commons.js" type="text/javascript"></script>
-		<script src="bpmconsumer/DataModels.js" type="text/javascript"></script>
-		<link href="bpmconsumer/style.css" media="screen, handheld" rel="stylesheet" type="text/css">
-		<script>
+<!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
+<script src="bpmconsumer/Commons.js" type="text/javascript"></script>
+<script src="bpmconsumer/DataModels.js" type="text/javascript"></script>
+<link href="bpmconsumer/style.css" media="screen, handheld"
+	rel="stylesheet" type="text/css">
+<script>
 				sap.ui.localResources("bpmconsumer");
 				var view = sap.ui.view({id:"idBpmConsumer1", viewName:"bpmconsumer.BpmConsumer", type:sap.ui.core.mvc.ViewType.JS});
 				view.placeAt("content");
 		</script>
 
-	</head>
-	<body class="sapUiBody" role="application">
-		<div id="content"></div>
-	</body>
+</head>
+<body class="sapUiBody" role="application">
+	<div id="content"></div>
+</body>
 </html>
